# youtube

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  app.py  notebooklm.cmd  package-lock.json  package.json  pyproject.toml  render.yaml  run-web.cmd  tsconfig.json  vercel.json  wsgi.py
api/: index.py
public/: app.js  index.html  styles.css
scripts/: sync_public.py
skills/notebooklm/: SKILL.md
skills/notebooklm/agents/: openai.yaml
skills/notebooklm/references/: workflow.md
skills/notebooklm/scripts/: notebooklm_pipeline.py
skills/yt-research/: SKILL.md
skills/yt-research/agents/: openai.yaml
skills/yt-research/references/: query-patterns.md
skills/yt-research/scripts/: search_youtube.py
web/: README.md  __init__.py  app.py  requirements.txt
web/frontend/: app.ts
web/static/: app.js  index.html  styles.css
web/templates/: base.html  connect.html  login.html  overview.html  workflow.html  workspace.html
